# name-analysis

./: README.md  db_prenoms.csv  pyproject.toml
name_analysis/: ui.py  utils.py
name_analysis/streamlit_pydantic/: __init__.py  ui_renderer.py
